--- a/index.html
+++ b/index.html
@@ -1,14 +1,296 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>codedamn Project</title>
-  </head>
-  <body>
-    <h1>Massively</h1>
-    <!-- start writing your code -->
-    <p>Your code goes here</p>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Codedamn Project</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/d3479aa49f.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+  <header>
+
+    <h1>THIS IS MASSIVELY</h1>
+
+    <p>
+      A free, fully responsive HTML5 + CSS3 site template designed
+      by @ajlkn for HTML5 UP and released for free under the
+      Creative Commons license
+    </p>
+
+    <i class="fa-light fa-circle-arrow-down"></i>
+
+  </header>
+
+  <main>
+
+    <section id="nav">
+      <div class="active">
+        <p>THIS IS MASSIVELY</p>
+      </div>
+      <div class="inactive">
+        <p>GENERIC PAGE</p>
+      </div>
+      <div class="inactive">
+        <p>ELEMENTS REFERENCE</p>
+      </div>
+      <div class="icons">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+      </div>
+    </section>
+
+    <section id="container">
+      <section class="date">
+        <p>April 25, 2017</p>
+      </section>
+
+      <section class="head">
+        <h1>
+          AND THIS IS A MASSIVE HEADLINE
+        </h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Omnis eveniet eligendi nobis temporibus accusantium aut
+          nisi aspernatur fugit
+        </p>
+        <img src="assets/images/main-section.jpg" alt="main-section">
+        <button id="btn-head">FULL STORY</button>
+      </section>
+
+      <section class="cards-grid">
+
+        <div class="card">
+          <p class="card-date">
+            April 24, 2017
+          </p>
+          <h1 class="card-title">
+            SED MAGNA IPSUM FAUCIBUS
+          </h1>
+          <img src="assets/images/1.jpg" alt="1">
+          <p class="card-description">
+            Donec eget ex magna. Interdum et malesuada
+            fames ac ante ipsum primis faucibus. Pellentesque
+            venenatis dolor imperdiet dolor mattis sagittis magna
+            etiam
+          </p>
+          <button class="card-btn">FULL STORY</button>
+        </div>
+
+        <div class="card">
+          <p class="card-date">
+            April 22, 2017
+          </p>
+          <h1 class="card-title">
+            PRIMIS EGET IMPERDIET LOREM
+          </h1>
+          <img src="assets/images/2.jpg" alt="2">
+          <p class="card-description">
+            Donec eget ex magna. Interdum et malesuada
+            fames ac ante ipsum primis faucibus. Pellentesque
+            venenatis dolor imperdiet dolor mattis sagittis magna
+            etiam
+          </p>
+          <button class="card-btn">FULL STORY</button>
+        </div>
+
+        <div class="card">
+          <p class="card-date">
+            April 18, 2017
+          </p>
+          <h1 class="card-title">
+            ANTE MATTIS INTERDUM DOLOR
+          </h1>
+          <img src="assets/images/3.jpg" alt="3">
+          <p class="card-description">
+            Donec eget ex magna. Interdum et malesuada
+            fames ac ante ipsum primis faucibus. Pellentesque
+            venenatis dolor imperdiet dolor mattis sagittis magna
+            etiam
+          </p>
+          <button class="card-btn">FULL STORY</button>
+        </div>
+
+        <div class="card">
+          <p class="card-date">
+            April 14, 2017
+          </p>
+          <h1 class="card-title">
+            TEMPUS SED NULLA IMPERDIET
+          </h1>
+          <img src="assets/images/4.jpg" alt="4">
+          <p class="card-description">
+            Donec eget ex magna. Interdum et malesuada
+            fames ac ante ipsum primis faucibus. Pellentesque
+            venenatis dolor imperdiet dolor mattis sagittis magna
+            etiam
+          </p>
+          <button class="card-btn">FULL STORY</button>
+        </div>
+
+        <div class="card">
+          <p class="card-date">
+            April 11, 2017
+          </p>
+          <h1 class="card-title">
+            ODIO MAGNA SED CONSECTETUR
+          </h1>
+          <img src="assets/images/5.jpg" alt="5">
+          <p class="card-description">
+            Donec eget ex magna. Interdum et malesuada
+            fames ac ante ipsum primis faucibus. Pellentesque
+            venenatis dolor imperdiet dolor mattis sagittis magna
+            etiam
+          </p>
+          <button class="card-btn">FULL STORY</button>
+        </div>
+
+        <div class="card">
+          <p class="card-date">
+            April 7, 2017
+          </p>
+          <h1 class="card-title">
+            AUGUE LOREM PRIMIS VESTIBULUM
+          </h1>
+          <img src="assets/images/6.jpg" alt="6">
+          <p class="card-description">
+            Donec eget ex magna. Interdum et malesuada
+            fames ac ante ipsum primis faucibus. Pellentesque
+            venenatis dolor imperdiet dolor mattis sagittis magna
+            etiam
+          </p>
+          <button class="card-btn">FULL STORY</button>
+        </div>
+
+
+      </section>
+
+      <section class="pages">
+        <div class="barre">
+          <div class="number">
+            1
+          </div>
+          <div class="number">
+            2
+          </div>
+          <div class="number">
+            3
+          </div>
+          <div class="number">
+            ...
+          </div>
+          <div class="number">
+            8
+          </div>
+          <div class="number">
+            9
+          </div>
+          <div class="number">
+            10
+          </div>
+          <div class="next">
+            NEXT >
+          </div>
+        </div>
+      </section>
+
+      <section class="foot">
+
+        <div class="form">
+          <form>
+            <label for="name">NAME</label>
+            <input type="text" name="name" id="name">
+            <label for="email">EMAIL</label>
+            <input type="email" name="email" id="email">
+            <label for="message">MESSAGE</label>
+            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+            <input type="submit" value="SEND">
+          </form>
+        </div>
+
+        <div class="address">
+          <div class="foot-title">
+            <h1>ADDRESS</h1>
+          </div>
+          <div class="foot-content">
+            <p>
+              1234 Somewhere Road #87257
+              Nashville, TN 00000-0000
+            </p>
+          </div>
+        </div>
+
+        <div class="phone">
+          <div class="foot-title">
+            <h1>PHONE</h1>
+          </div>
+          <div class="foot-content">
+            <p>
+              (000) 000-0000
+            </p>
+          </div>
+        </div>
+
+        <div class="email">
+          <div class="foot-title">
+            <h1>EMAIL</h1>
+          </div>
+          <div class="foot-content">
+            <p>
+              info@untitled.tld
+            </p>
+          </div>
+        </div>
+
+        <div class="social">
+          <div class="foot-title">
+            <h1>SOCIAL</h1>
+          </div>
+          <div class="foot-content">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+          </div>
+        </div>
+
+      </section>
+    </section>
+
+  </main>
+
+  <footer>
+
+    <div class="text-footer">
+
+      <div class="footer-1">
+        <p>
+          &copy; UNTITLED
+        </p>
+      </div>
+
+      <div class="footer-2">
+        <p>
+          DESIGN: HTML5 UP
+        </p>
+      </div>
+
+      <div class="footer-3">
+        <p>
+          DEMO IMAGES: UNSPLASH
+        </p>
+      </div>
+
+    </div>
+
+  </footer>
+
+</body>
+
 </html>
