--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
 <body>
 
   <header>
+    <div class="header-content">
+      <h1 class="header-title">THIS IS MASSIVELY</h1>
 
-    <h1>THIS IS MASSIVELY</h1>
+      <em class="header-description">
+        A free, fully responsive HTML5 + CSS3 site template designed
+        by @ajlkn for HTML5 UP and released for free under the
+        Creative Commons license
+      </em>
 
-    <p>
-      A free, fully responsive HTML5 + CSS3 site template designed
-      by @ajlkn for HTML5 UP and released for free under the
-      Creative Commons license
-    </p>
+      <img class="header-img" src="assets/images/arrow down.png" alt="arrow">
+    </div>
 
-    <i class="fa-light fa-circle-arrow-down"></i>
+
 
   </header>
 
