--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   <main>
 
     <section id="nav">
-      <div class="active">
+      <div class="nav1">
         <p>THIS IS MASSIVELY</p>
       </div>
-      <div class="inactive">
+      <div class="nav2">
         <p>GENERIC PAGE</p>
       </div>
-      <div class="inactive">
+      <div class="nav3">
         <p>ELEMENTS REFERENCE</p>
       </div>
       <div class="icons">
