Sección date terminada

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
     <section id="container">
       <section class="date">
-        <p>April 25, 2017</p>
+        <div class="line"></div>
+        <p class="date-d">April 25, 2017</p>
+        <div class="line"></div>
       </section>
 
       <section class="head">
