Section head dentro de main terminada

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         <h1>
           AND THIS IS A MASSIVE HEADLINE
         </h1>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Omnis eveniet eligendi nobis temporibus accusantium aut
-          nisi aspernatur fugit
-        </p>
+        <em>
+          Aenean ornare velit lacus varius enim ullamcorper proin aliquam <br><br>
+          facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor <br><br>
+          amet nullam sed etiam veroeros.
+        </em>
         <img src="assets/images/main-section.jpg" alt="main-section">
         <button id="btn-head">FULL STORY</button>
       </section>
