Cards grid terminado

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
       <section class="cards-grid">
 
-        <div class="card">
+        <div id="card" class="card1">
           <p class="card-date">
             April 24, 2017
           </p>
           <h1 class="card-title">
-            SED MAGNA IPSUM FAUCIBUS
+            SED MAGNA <br> IPSUM FAUCIBUS
           </h1>
           <img src="assets/images/1.jpg" alt="1">
           <p class="card-description">
@@ -85,12 +85,12 @@
           <button class="card-btn">FULL STORY</button>
         </div>
 
-        <div class="card">
+        <div id="card" class="card2">
           <p class="card-date">
             April 22, 2017
           </p>
           <h1 class="card-title">
-            PRIMIS EGET IMPERDIET LOREM
+            PRIMIS EGET <br> IMPERDIET LOREM
           </h1>
           <img src="assets/images/2.jpg" alt="2">
           <p class="card-description">
@@ -102,12 +102,12 @@
           <button class="card-btn">FULL STORY</button>
         </div>
 
-        <div class="card">
+        <div id="card" class="card3">
           <p class="card-date">
             April 18, 2017
           </p>
           <h1 class="card-title">
-            ANTE MATTIS INTERDUM DOLOR
+            ANTE MATTIS <br> INTERDUM DOLOR
           </h1>
           <img src="assets/images/3.jpg" alt="3">
           <p class="card-description">
@@ -119,12 +119,12 @@
           <button class="card-btn">FULL STORY</button>
         </div>
 
-        <div class="card">
+        <div id="card" class="card4">
           <p class="card-date">
             April 14, 2017
           </p>
           <h1 class="card-title">
-            TEMPUS SED NULLA IMPERDIET
+            TEMPUS SED <br> NULLA IMPERDIET
           </h1>
           <img src="assets/images/4.jpg" alt="4">
           <p class="card-description">
@@ -136,12 +136,12 @@
           <button class="card-btn">FULL STORY</button>
         </div>
 
-        <div class="card">
+        <div id="card" class="card5">
           <p class="card-date">
             April 11, 2017
           </p>
           <h1 class="card-title">
-            ODIO MAGNA SED CONSECTETUR
+            ODIO MAGNA <br> SED CONSECTETUR
           </h1>
           <img src="assets/images/5.jpg" alt="5">
           <p class="card-description">
@@ -153,12 +153,12 @@
           <button class="card-btn">FULL STORY</button>
         </div>
 
-        <div class="card">
+        <div id="card" class="card6">
           <p class="card-date">
             April 7, 2017
           </p>
           <h1 class="card-title">
-            AUGUE LOREM PRIMIS VESTIBULUM
+            AUGUE LOREM <br> PRIMIS VESTIBULUM
           </h1>
           <img src="assets/images/6.jpg" alt="6">
           <p class="card-description">
