Barra Numeros terminada

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
       <section class="pages">
         <div class="barre">
-          <div class="number">
+          <div bg="grey" class="number">
             1
           </div>
           <div class="number">
@@ -184,7 +184,7 @@
           <div class="number">
             3
           </div>
-          <div class="number">
+          <div txt="grey" class="number">
             ...
           </div>
           <div class="number">
