--- a/index.html
+++ b/index.html
@@ -206,13 +206,21 @@
 
         <div class="form">
           <form>
-            <label for="name">NAME</label>
+            <div class="form-control">
+              <label for="name">NAME</label>
             <input type="text" name="name" id="name">
-            <label for="email">EMAIL</label>
+            </div>
+            <div class="form-control">
+              <label for="email">EMAIL</label>
             <input type="email" name="email" id="email">
-            <label for="message">MESSAGE</label>
+            </div>
+            <div class="form-control">
+              <label for="message">MESSAGE</label>
             <textarea name="message" id="message" cols="30" rows="10"></textarea>
-            <input type="submit" value="SEND">
+            </div>
+            <div class="form-submit">
+              <input class="form-btn" type="submit" value="SEND MESSAGE">
+            </div>
           </form>
         </div>
 
@@ -222,7 +230,8 @@
           </div>
           <div class="foot-content">
             <p>
-              1234 Somewhere Road #87257
+              <br>
+              1234 Somewhere Road #87257 <br>
               Nashville, TN 00000-0000
             </p>
           </div>
@@ -255,10 +264,18 @@
             <h1>SOCIAL</h1>
           </div>
           <div class="foot-content">
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-github"></i>
+            <div class="icon">
+              <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="icon">
+              <i class="fa-brands fa-facebook-f"></i>
+            </div>
+            <div class="icon">
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="icon">
+              <i class="fa-brands fa-github"></i>
+            </div>
           </div>
         </div>
 
