Media query mobile terminada

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           AND THIS IS A MASSIVE HEADLINE
         </h1>
         <em>
-          Aenean ornare velit lacus varius enim ullamcorper proin aliquam <br><br>
-          facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor <br><br>
+          Aenean ornare velit lacus varius enim ullamcorper proin aliquam 
+          facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor 
           amet nullam sed etiam veroeros.
         </em>
         <img src="assets/images/main-section.jpg" alt="main-section">
@@ -73,7 +73,7 @@
             April 24, 2017
           </p>
           <h1 class="card-title">
-            SED MAGNA <br> IPSUM FAUCIBUS
+            SED MAGNA IPSUM FAUCIBUS
           </h1>
           <img src="assets/images/1.jpg" alt="1">
           <p class="card-description">
@@ -90,7 +90,7 @@
             April 22, 2017
           </p>
           <h1 class="card-title">
-            PRIMIS EGET <br> IMPERDIET LOREM
+            PRIMIS EGET IMPERDIET LOREM
           </h1>
           <img src="assets/images/2.jpg" alt="2">
           <p class="card-description">
@@ -107,7 +107,7 @@
             April 18, 2017
           </p>
           <h1 class="card-title">
-            ANTE MATTIS <br> INTERDUM DOLOR
+            ANTE MATTIS INTERDUM DOLOR
           </h1>
           <img src="assets/images/3.jpg" alt="3">
           <p class="card-description">
@@ -124,7 +124,7 @@
             April 14, 2017
           </p>
           <h1 class="card-title">
-            TEMPUS SED <br> NULLA IMPERDIET
+            TEMPUS SED NULLA IMPERDIET
           </h1>
           <img src="assets/images/4.jpg" alt="4">
           <p class="card-description">
@@ -141,7 +141,7 @@
             April 11, 2017
           </p>
           <h1 class="card-title">
-            ODIO MAGNA <br> SED CONSECTETUR
+            ODIO MAGNA SED CONSECTETUR
           </h1>
           <img src="assets/images/5.jpg" alt="5">
           <p class="card-description">
@@ -158,7 +158,7 @@
             April 7, 2017
           </p>
           <h1 class="card-title">
-            AUGUE LOREM <br> PRIMIS VESTIBULUM
+            AUGUE LOREM PRIMIS VESTIBULUM
           </h1>
           <img src="assets/images/6.jpg" alt="6">
           <p class="card-description">
